gradio-app/chart/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gradio-prompt-app
spec:
  path: /
  to:
    kind: Service
    name: gradio-prompt-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
